trunk/Archive2/d0/4e42e854b11ba5/output
In file included from /usr/include/c++/4.8/algorithm:62:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_algo.h: In instantiation of ‘typename std::iterator_traits<_Iterator>::difference_type std::count_if(_IIter, _IIter, _Predicate) [with _IIter = __gnu_cxx::__normal_iterator<int*, std::vector<int> >; _Predicate = int; typename std::iterator_traits<_Iterator>::difference_type = long int]’:
main.cpp:12:63:   required from here
/usr/include/c++/4.8/bits/stl_algo.h:4679:21: error: ‘__pred’ cannot be used as a function
  if (__pred(*__first))
                     ^
